--- a/app/assets/stylesheets/searches.scss
+++ b/app/assets/stylesheets/searches.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the searches controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@media screen and (max-width:992px) {
+  .search-image{
+    width: 48%;
+    max-height: auto;
+    margin: 1%;
+  }
+}
+
+@media screen and (min-width:992px) {
+  .search-image{
+    width: 48%;
+    max-height: 150px;
+    margin: 1%;
+  }
+}
