--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
       <h3><%= link_to @post.shrine.name, shrine_path(@post.shrine), class:"text-reset" %></h3>
       <div class="card">
         <div class="card-header d-flex justify-content-between pb-0">
-          <h5><%= link_to @post.user.name, user_path(@post.user) %></h5>
+          <h5><%= link_to @post.user.name, user_path(@post.user), class:"text-reset" %></h5>
           <% if user_signed_in? %>
             <h5 id="follow"><%= render "users/follow", user: @post.user %></h5>
           <% end %>
@@ -24,7 +24,7 @@
           <% end %>
         </div>
       </div>
-      <h4 class="mt-3"><%= @post.user.name %>さんの他の投稿</h4>
+      <h3 class="mt-3"><%= @post.user.name %>さんの他の投稿</h3>
       <% if @other_posts.exists? %>
         <% @other_posts.each do |other_post| %>
           <%= link_to shrine_post_path(other_post.shrine, other_post), class:"text-reset" do %>
