[near_shrine_search]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 
 body{
   font-family: serif, sans-serif;
+  background-image: url(09.jpg);
   h2, h3{
   font-family: 'Shippori Mincho B1', serif;
   }
@@ -47,4 +48,20 @@ body{
  padding: 3px;
  margin: 3px;
  border-radius: 3px;
+}
+// kaminariのデザイン変更
+.pagination{
+    li a {
+      color: #696969;
+      margin: 0 5px;
+      border-radius: 0.25rem;
+    }
+    li a:hover{
+        background: #93c9ff;
+      }
+    .active .page-link {
+      background: #adb5bd;
+      border: gray;
+      color: #000;
+    }
 }
