--- a/app/views/shrines/index.html.erb
+++ b/app/views/shrines/index.html.erb
@@ -39,7 +39,7 @@
     <div class="col-lg-5">
       <h2>新着投稿<small>(5件)</small></h2>
       <% @posts.each do |post| %>
-        <div class="card p-2 mb-2">
+        <div class="card shadow p-2 mb-2">
           <div class="card-header mb-1 d-flex justify-content-between">
             <%= link_to  user_path(post.user) do %>
               <%= attachment_image_tag post.user, :profile_image, :fill,35,35, class:"rounded-circle" %>
@@ -58,7 +58,7 @@
         </div>
       <% end %>
       <h2>おすすめタグ<small>(10件)</small></h2>
-        <div class="d-flex flex-wrap border rounded p-2">
+        <div class="d-flex flex-wrap border rounded  bg-light shadow p-2">
           <% @tags.each do |tag| %>
             <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_path(content: tag.tag_name, model: 'tag'), class:"tag text-reset mx-2" %>
           <% end %>
