--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -17,7 +17,7 @@
 <div class="top-content-dark d-flex">
   <div class="d-flex flex-column align-items-center m-auto w-25 text-white">
     <h2>共有する</h2>
-    <p>あなたのお参りした神社の感想や写真を投稿しましょう。投稿を通じて皆様の輪げていきましょう。</p>
+    <p>あなたのお参りした神社の感想や写真を投稿しましょう。投稿を通じて皆様の輪を広げていきましょう。</p>
   </div>
   <div class="w-50 d-flex flex-wrap">
     <%= image_tag "inari1.jpg", class:"w-50" %>
