--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
       <%= breadcrumbs separator: " &rsaquo; ", class:"ml-5 mt-3" %>
       <%= yield %>
     </main>
+    <%= render "layouts/footer" %>
   </body>
 </html>
