--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,7 +1,7 @@
-<div class="container py-3">
+<div class="container py-3" style="margin-bottom: 60px;">
   <div class="row">
     <% breadcrumb :search %>
-    <h3 class="pl-3">検索結果</h3>
+    <h3 class="col-12 pl-3">検索結果</h3>
     <div class="d-flex flex-wrap justify-content-between">
       <% @records.each do |shrine| %>
         <div class="col-lg-6 px-0">
