--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,6 @@
   <div class="container py-5">
     <div class="row">
-      <div class="col-10">
+      <div class="col-10 offset-2">
         <h4><%= @user.name %>さんの会員情報編集</h4>
         <%= form_with url: admin_user_path(@user), model: [:admin ,@user], local: true, class:'mt-4' do |f| %>
           <div class="form-row">
@@ -16,12 +16,12 @@
             <%= f.text_area :introduction, class:"col-4 p-1" %>
           </div>
           <div>
-            <%= f.label :'会員ステータス', class:"col-2 pl-0" %>
+            <%= f.label :'会員ステータス', class:"col-2 pl-0 mt-3" %>
             <%= f.radio_button :is_deleted, false, id: 'user_false' %><%= f.label :false, "有効", class:'mr-2' %>
             <%= f.radio_button :is_deleted, true, id: 'user_true' %><%= f.label :true, "退会" %>
           </div>
           <div class="d-flex">
-            <div class="col-4 offset-2 p-0">
+            <div class="col-4 offset-2 p-0 mt-3">
               <%= f.submit '変更を保存', class:"btn btn-sm btn-success col-7" %>
             </div>
           </div>
