--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-7">
       <h3><%= @user.name %>さんの会員情報</h3>
-      <table class="table table-bordered border-primary mt-4">
+      <table class="table table-bordered bg-light mt-4">
         <tr>
           <td class="col-3 table-secondary">会員ID</td>
           <td><%= @user.id %></td>
@@ -23,7 +23,7 @@
           <td class="table-secondary">会員ステータス</td>
           <td>
             <% if @user.is_deleted %>
-              <span class='text-secondary'>退会</span>
+              <span class='text-danger'>退会</span>
             <% else %>
               <span class='text-success'>有効</span>
             <% end %>
