--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="pb-5">
-  <nav class="navbar navbar-expand-lg bg-dark fixed-top py-0">
+  <nav class="navbar navbar-expand-lg fixed-top py-0">
     <div class="container">
       <a class="navbar-brand" href="/"><%= image_tag "logo.png", size:"100x50" %></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#TogglerMenu" aria-controls="TogglerMenu" aria-expanded="false" aria-label="Toggle navigation">
