--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -35,17 +35,17 @@
       <div id="map" style="width: 100%; height: 350px;"> <!--Google Mapを表示する-->
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['API_KEY'] %>&callback=initMap" async defer></script>
       </div>
-      <table class="table table-bordered">
+      <table class="table table-bordered bg-light shadow">
         <tbody>
           <tr>
-            <th>住所</th>
+            <th class="col-2">住所</th>
             <td><%= @shrine.address %></td>
           </tr>
           <tr>
-            <th>近くの神社</th>
+            <th class="col-2">近くの神社</th>
             <td>
-              <% unless @near_shrine.length == 0 %> <!--近くの神社の配列内にデータが存在するか判断-->
-                <ul class="list-unstyled">
+              <% unless @near_shrine.length == 0 %> <!--近くの神社の配列が存在するか判断-->
+                <ul class="list-unstyled m-0">
                   <% i = 0 %>
                   <% while i < @near_shrine.length do %>
                     <li>
@@ -67,11 +67,11 @@
     <div class="col-lg-5">
       <div class="d-flex mb-3">
         <h3 class="m-0">最近の投稿</h3>
-        <%= link_to '投稿する', new_shrine_post_path(@shrine, @shrine.posts), class:"btn btn-sm btn-outline-success rounded-pill ml-3" %>
+        <%= link_to '投稿する', new_shrine_post_path(@shrine, @shrine.posts), class:"btn btn-sm btn-outline-success rounded-pill ml-3 mt-1" %>
       </div>
       <% if @posts.exists? %>
         <% @posts.each do |post| %>
-          <div class="card p-2 mb-2">
+          <div class="card shadow-sm p-2 mb-2">
             <div class="card-header mb-1 d-flex justify-content-between">
               <%= link_to  user_path(post.user) do %>
                 <%= attachment_image_tag post.user, :profile_image, :fill,35,35, class:"rounded-circle" %>
