--- a/app/views/users/caution.html.erb
+++ b/app/views/users/caution.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <% breadcrumb :user_caution %>
-  <div class="d-flex flex-column  align-items-center justify-content-center py-5">
-    <p class="text-center font-weight-bold">本当に退会しますか？</p>
+  <div class="d-flex flex-column align-items-center justify-content-center mb-1" style="height: 600px;">
+    <h4 class="text-center font-weight-bold mb-3">本当に退会しますか？</h4>
     <p class="text-center">
       退会すると、会員登録情報や<br />
       これまでの投稿履歴が閲覧できなくなります。<br />
@@ -9,7 +9,7 @@
     </p>
     <div class="d-flex justify-content-center">
       <%= link_to '退会しない', user_path(current_user), class:"btn btn-sm btn-primary mx-2" %>
-      <%= link_to '退会する', users_hide_path(current_user), method: :put, data: {confirm: "削除しますか？"}, class:"btn btn-sm btn-danger mx-3" %>
+      <%= link_to '退会する', users_hide_path(current_user), method: :put, data: {confirm: "本当に退会しますか？"}, class:"btn btn-sm btn-danger mx-3" %>
     </div>
   </div>
 </div>
