--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,10 @@
-<div class="container py-3">
+<div class="container mb-1 py-3" style="height: 600px;">
   <div class="row">
     <% breadcrumb :user_edit, @user %>
     <div class="col-lg-10 mx-auto">
       <h3>ユーザ編集画面</h3>
       <%= form_with model: @user, local: true do |f| %>
-        <div class="form-row">
+        <div class="form-row mt-4">
           <%= f.label :名前,class:"col-2 pl-4" %>
           <%= f.text_field :name, class:"col-5 p-1" %>
         </div>
@@ -16,9 +16,9 @@
           <%= f.label :ユーザ画像, class:"col-2" %>
           <%= f.attachment_field :profile_image %>
         </div>
-        <div class="d-flex offset-2 mt-3">
-          <%= f.submit '変更を保存', class:"btn btn-sm btn-success mr-5" %>
-          <%= link_to '退会する', users_caution_path, class:"btn btn-sm btn-danger" %>
+        <div class="d-flex offset-2 mt-4">
+          <%= f.submit '変更を保存', class:"btn btn-sm btn-outline-success mr-5" %>
+          <%= link_to '退会する', users_caution_path, class:"btn btn-sm btn-outline-danger" %>
         </div>
       <% end %>
     </div>
