--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,46 +1,42 @@
-<div class="pt-3">
-  <div>
-    <div class="offset-2 mt-5">
-      <h4 class="d-inline" style='text-shadow: 1px 2px 3px #808080;'>新規会員登録</h4>
-      <div class="mx-2 my-4"><h5 class="d-inline bg-light">会員登録がまだの方はこちらから</h5></div>
-      <%= render "users/shared/error_messages", resource: resource %>
-      <p class="text-danger"><%= flash[:notice] %></p>
-      <%= form_with model: @user, url: user_registration_path, id:'new_user', class:'new_user', local: true do |f| %>
-        <div class="form-row">
-          <div class="col-2">名前（2文字以上）</div>
-          <div class="field">
-            <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "山田太郎", size: 40, class:"ml-3 mb-3" %>
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="col-2">メールアドレス</div>
-          <div class="field">
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com", size: 40, class:"ml-3 mb-3" %>
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="col-2">パスワード(６文字以上)</div>
-          <div class="field">
-            <%= f.password_field :password, autocomplete: "new-password", size: 40, class:"ml-3 mb-3"%>
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="col-2">パスワード(確認用)</div>
-          <div class="field">
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", size: 40, class:"ml-3 mb-4" %>
-          </div>
-        </div>
-
-        <div>
-          <%= f.submit "新規会員登録", class:"btn btn-sm btn-success offset-2 mb-4" %>
-        </div>
-      <% end %>
-
-      <h5 class="d-inline">既に登録済みの方</h5>
-      <p class="offset-1 mt-4"><%= link_to 'こちら', new_user_session_path %>からログインを行ってください。</p>
+<div class="offset-2 my-5" style="height: 600px;">
+  <h3 class="d-inline" style='text-shadow: 1px 2px 3px #808080;'>新規会員登録</h3>
+  <h5 class="mx-2 my-4">会員登録がまだの方はこちらから</h5>
+  <%= render "users/shared/error_messages", resource: resource %>
+  <p class="text-danger"><%= flash[:notice] %></p>
+  <%= form_with model: @user, url: user_registration_path, id:'new_user', class:'new_user', local: true do |f| %>
+    <div class="form-row">
+      <div class="col-2">名前（2文字以上）</div>
+      <div class="field">
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "山田太郎", size: 40, class:"ml-3 mb-3" %>
+      </div>
     </div>
-  </div>
+
+    <div class="form-row">
+      <div class="col-2">メールアドレス</div>
+      <div class="field">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com", size: 40, class:"ml-3 mb-3" %>
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="col-2">パスワード(６文字以上)</div>
+      <div class="field">
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "password", size: 40, class:"ml-3 mb-3"%>
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="col-2">パスワード(確認用)</div>
+      <div class="field">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "password（確認用）", size: 40, class:"ml-3 mb-4" %>
+      </div>
+    </div>
+
+    <div>
+      <%= f.submit "新規会員登録", class:"btn btn-outline-success offset-3 mb-4" %>
+    </div>
+  <% end %>
+
+  <h5 class="d-inline">既に登録済みの方</h5>
+  <p class="offset-1 mt-4"><%= link_to 'こちら', new_user_session_path %>からログインを行ってください。</p>
 </div>
