--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,12 +6,12 @@
       <div class="d-flex">
         <h5 class="m-0 mt-1">登録情報</h5>
         <% if @user == current_user %>
-          <%= link_to '編集', edit_user_path(@user), class:"btn btn-sm btn-success ml-3 " %>
+          <%= link_to '編集', edit_user_path(@user), class:"btn btn-sm btn-outline-success ml-3 " %>
         <% else %>
           <h5 id="follow" class="ml-3 mb-0"><%= render "users/follow", user: @user %></h5>
         <% end %>
       </div>
-      <div class="media border p-1 mt-2 mb-3 bg-light">
+      <div class="media border bg-light shadow-sm p-1 mt-2 mb-3">
         <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, class:"rounded-circle mr-3 mt-1" %>
         <div class="media-body">
           <h4><%= @user.name %></h4>
@@ -23,7 +23,7 @@
       <%= link_to "新しい順", user_path(id: @user.id, sort: "latest") %> |
       <%= link_to "古い順", user_path( @user) %>
       <% @posts.each do |post| %>
-        <div class="card mb-3">
+        <div class="card shadow mb-3">
           <div class="row">
             <div class="col-4"><%= attachment_image_tag post.post_images.first, :image, class:"w-100" %></div>
             <div class="col-8">
@@ -42,7 +42,7 @@
     <div class="col-lg-4 col-md-6">
       <h3 class="font_shppori">ブックマーク</h3>
       <% if @bookmark_shrines.present? %>
-        <div class="border">
+        <div class="border bg-light shadow-sm">
           <% @bookmark_shrines.each do |shrine| %>
             <div class="media py-2 ml-1 border-bottom">
               <%= attachment_image_tag shrine.shrine_images.first, :image, :fill,50,50, class:"rounded" %>
@@ -55,7 +55,7 @@
       <% end %>
       <h3 class="font_shppori mt-3">フォローユーザ</h3>
       <% if @followings.present? %>
-        <div class="border">
+        <div class="border bg-light shadow-sm">
           <% @followings.each do |following| %>
             <div class="media py-2 ml-1 border-bottom">
               <%= attachment_image_tag following, :profile_image, :fill,50,50, class:"rounded" %>
