--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container py-3">
+<div class="container py-3" style="margin-bottom: 200px;">
   <div class="row">
     <% breadcrumb :edit_post, @post %>
     <div class="col-lg-10 mx-auto">
@@ -16,7 +16,7 @@
           <%= f.label :参拝日, class:"col-2" %>
           <%= f.date_field :visit_date, class:"col-3" %>
         </div>
-        <%= f.submit "投稿", class:"btn btn-sm btn-success offset-2 mt-4" %>
+        <%= f.submit "投稿する", class:"btn btn-outline-success offset-2 my-4" %>
       <% end %>
     </div>
   </div>
