--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,9 @@
-<div class="container py-3">
+<div class="container py-3" style="margin-bottom: 200px;">
   <div class="row">
     <% breadcrumb :new_post, @shrine %>
     <div class="col-lg-9 mx-auto">
       <h3>新規投稿</h3>
+      <p class="text-danger"><%= flash[:notice] %></p>
       <%= form_with model: [@shrine, @post], local: true do |f| %>
         <div class="form-row">
           <%= f.label :画像, class:"col-2" %>
