--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -16,7 +16,7 @@
           <%= f.label :参拝日, class:"col-2" %>
           <%= f.date_field :visit_date, class:"col-3" %>
         </div>
-        <%= f.submit "投稿する", class:"btn btn-outline-success offset-2 my-4" %>
+        <%= f.submit "変更する", class:"btn btn-outline-success offset-2 my-4" %>
       <% end %>
     </div>
   </div>
