--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,7 +10,7 @@
   <div class="d-flex flex-column align-items-center m-auto w-25">
     <h2>参拝する</h2>
     <p class="mt-2 mb-4">心を込めて祈りを捧げるにあたり丁寧な作法を心がけたいことは自然なことです。作法に込められた「心」についても理解いただければ幸いです。</p>
-    <p><%= link_to "詳しく知る >" ,about_path, class:"btn btn-outline-success rounded-pill" %></p>
+    <p><%= link_to "詳しく知る >" , manner_path, class:"btn btn-outline-success rounded-pill" %></p>
   </div>
 </div>
 
