--- a/app/views/homes/manner.html.erb
+++ b/app/views/homes/manner.html.erb
@@ -6,7 +6,7 @@
       <p>参拝の作法については厳密な決まりというものはありませんが、ここでは一般的な作法について説明をします。</p>
       <h3>鳥居をくぐる際には一礼をする</h3>
       <div class="d-flex mb-3">
-        <%= image_tag "omairi1.jpg", size:"350x250" %>
+        <%= image_tag "/assets/omairi1.jpg", size:"350x250" %>
         <p class="ml-4">
           鳥居は神様の領域を区切る結界としての役割があると言われています。そのため目上の方の家に訪問するような気持ちで丁寧に一礼してから入るようにしましょう。<br />
           参拝を終えた後に帰る際にも振り返り向き直って一礼するようにしましょう。
@@ -24,21 +24,21 @@
         また、洗った水が水盤(水が溜まっている場所)に入らないように注意しましょう。
       </p>
       <div class="d-flex">
-        <%= image_tag "tyozu1.jpg", size:"350x250" %>
+        <%= image_tag "/assets/tyozu1.jpg", size:"350x250" %>
         <ul>
           <li class="mb-3">まずは右手で柄杓を持ち水を一杯汲んで左手を清めます。</li>
           <li>左手に柄杓を持ち替え今度は右手を清めます。</li>
         </ul>
       </div>
       <div class="d-flex my-3">
-        <%= image_tag "tyozu2.jpg", size:"350x250" %>
+        <%= image_tag "/assets/tyozu2.jpg", size:"350x250" %>
         <ul>
           <li class="mb-3">柄杓を右手に持ち替え左手のひらに水を受けて口をすすぎます。(この際柄杓には口をつけないようにしましょう)</li>
           <li>口をすすぎ終わったら再び左手を清めます。</li>
         </p>
       </div>
       <div class="d-flex mb-3">
-        <%= image_tag "tyozu3.jpg", size:"350x250" %>
+        <%= image_tag "/assets/tyozu3.jpg", size:"350x250" %>
         <ul>
           <li class="mb-3">柄杓を立てて残った水で柄(持ち手)を洗って清めます。</li>
           <li>元のあった場所に伏せて置きます。</li>
@@ -56,7 +56,7 @@
         ※一例として出雲大社では「二礼四拍手一礼」の作法で拝礼します。
       </p>
       <div class="d-flex">
-        <%= image_tag "omairi.jpg", size:"350x250" %>
+        <%= image_tag "/assets/omairi.jpg", size:"350x250" %>
         <ol>
           <li>姿勢を正して二回深くお辞儀を行います。</li>
           <li class="my-3">両手を胸の高さで合わせ、右手を少し手前に引いてずらして二回拍手を行います。</li>
