--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -7,19 +7,19 @@
 }
 
 .main-image1{
-  background-image: image-url(shrine1.jpg);
+  background-image: image-url("shrine1.jpg");
 }
 
 .main-image2{
-  background-image: image-url(shrine2.jpg);
+  background-image: image-url("shrine2.jpg");
 }
 
 .main-image3{
-  background-image: image-url(shrine3.jpg);
+  background-image: image-url("shrine3.jpg");
 }
 
 .main-image4{
-  background-image: image-url(shrine4.jpg);
+  background-image: image-url("shrine4.jpg");
 }
 
 .top-content-light{
