--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 
 body{
   font-family: serif, sans-serif;
-  background-image: image-url(background.jpg);
+  background-image: image-url("background.jpg");
 }
 
 h2, h3{
