--- a/app/views/homes/manner.html.erb
+++ b/app/views/homes/manner.html.erb
@@ -1,7 +1,7 @@
 <div class="container py-3">
   <div class="row">
     <% breadcrumb :manner %>
-    <div class="col-10">
+    <div class="col-10 mx-auto">
       <h2>参拝の作法</h2>
       <p>参拝の作法については厳密な決まりというものはありませんが、ここでは一般的な作法について説明をします。</p>
       <h3>鳥居をくぐる際には一礼をする</h3>
