--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,19 +5,19 @@
   <div class="main-image4"></div>
 </div>
 
-<div class="top-content-light d-flex">
+<div class="top-content-light d-flex fadein-right">
   <div class="w-50"><%= image_tag "/assets/omairi.jpg", class:"w-100" %></div>
   <div class="d-flex flex-column align-items-center m-auto w-25">
-    <h2>参拝する</h2>
+    <h2><span class="underline-dark">参拝する</span></h2>
     <p class="mt-2 mb-4">心を込めて祈りを捧げるにあたり丁寧な作法を心がけたいことは自然なことです。作法に込められた「心」についても理解いただければ幸いです。</p>
     <p><%= link_to "詳しく知る >" , manner_path, class:"btn btn-outline-success rounded-pill" %></p>
   </div>
 </div>
 
-<div class="top-content-dark d-flex">
+<div class="top-content-dark d-flex fadein-left">
   <div class="d-flex flex-column align-items-center m-auto w-25 text-white">
-    <h2>共有する</h2>
-    <p>あなたのお参りした神社の感想や写真を投稿しましょう。投稿を通じて皆様の輪を広げていきましょう。</p>
+    <h2><span class="underline-light">共有する</span></h2>
+    <p class="mt-2">あなたのお参りした神社の感想や写真を投稿しましょう。投稿を通じて皆様の輪を広げていきましょう。</p>
   </div>
   <div class="w-50 d-flex flex-wrap">
     <%= image_tag "/assets/inari1.jpg", class:"w-50" %>
@@ -32,7 +32,7 @@
     <div class="canvas"></div>
   </div>
   <div class="d-flex flex-column align-items-center m-auto w-25">
-    <h2>見つける</h2>
-    <p>都道府県・祭神・御利益で見つけることができます</p>
+    <h2><span class="underline-dark">見つける</span></h2>
+    <p class="mt-2">地域・祭神・御利益であなたがお参りしたい神社を見つけることができます</p>
   </div>
 </div>
