--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,9 @@
     <div class="container">
       <a class="navbar-brand" href="/"><%= image_tag "logo.png", size:"100x50" %></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#TogglerMenu" aria-controls="TogglerMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span></span>
+        <span></span>
+        <span></span>
       </button>
       <div class="collapse navbar-collapse" id="TogglerMenu">
         <div class="mr-auto">
@@ -25,7 +27,7 @@
             <% end %>
           </ul>
         </div>
-        <div>
+        <div class="mb-1">
           <%= render "searches/form" %>
         </div>
       </div>
