--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container py-3">
+<div class="container py-3" style="min-height: 620px;">
   <div class="row">
     <% breadcrumb :user, @user %>
     <div class="col-lg-8">
