--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
     <% breadcrumb :new_post, @shrine %>
     <div class="col-lg-9 mx-auto">
       <h3>新規投稿</h3>
-      <p class="text-danger"><%= flash[:notice] %></p>
+      <p class="text-danger"><%= flash[:alert] %></p>
       <%= form_with model: [@shrine, @post], local: true do |f| %>
         <div class="form-row">
           <%= f.label :画像, class:"col-2" %>
