--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,7 +1,7 @@
-<div class="container py-3" style="margin-bottom: 60px;">
+<div class="container py-3" style="min-height: 620px;">
   <div class="row">
     <% breadcrumb :search %>
-    <h3 class="col-12 pl-3">検索結果</h3>
+    <h2 class="pl-3">検索結果</h2>
     <div class="d-flex flex-wrap justify-content-between">
       <% @records.each do |shrine| %>
         <div class="col-lg-6 px-0">
@@ -35,6 +35,7 @@
           </div>
         </div>
       <% end %>
+      <div class="mx-auto mt-3"><%= paginate @records %></div>
     </div>
   </div>
 </div>
