--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,7 +1,9 @@
-<% unless user == current_user %>
-  <% if current_user.following?(user) %>
-    <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class:"btn btn-sm btn-outline-primary rounded-pill" %>
-  <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-sm btn-outline-primary rounded-pill" %>
+<% if user_signed_in? %>
+  <% unless user == current_user %>
+    <% if current_user.following?(user) %>
+      <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class:"btn btn-sm btn-outline-primary rounded-pill" %>
+    <% else %>
+      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class:"btn btn-sm btn-outline-primary rounded-pill" %>
+    <% end %>
   <% end %>
 <% end %>
