--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div class="top-content-light d-flex fadein-right">
-  <div class="w-50"><%= image_tag "/assets/omairi.jpg", class:"w-100" %></div>
+  <div class="w-50"><%= image_tag asset_path"omairi.jpg", class:"w-100" %></div>
   <div class="d-flex flex-column align-items-center m-auto w-25">
     <h2><span class="underline-dark">参拝する</span></h2>
     <p class="mt-2 mb-4">心を込めて祈りを捧げるにあたり丁寧な作法を心がけたいことは自然なことです。作法に込められた「心」についても理解いただければ幸いです。</p>
@@ -20,10 +20,10 @@
     <p class="mt-2">あなたのお参りした神社の感想や写真を投稿しましょう。投稿を通じて皆様の輪を広げていきましょう。</p>
   </div>
   <div class="w-50 d-flex flex-wrap">
-    <%= image_tag "/assets/inari1.jpg", class:"w-50" %>
-    <%= image_tag "/assets/inari2.jpg", class:"w-50" %>
-    <%= image_tag "/assets/inari3.jpg", class:"w-50" %>
-    <%= image_tag "/assets/inari4.jpg", class:"w-50" %>
+    <%= image_tag asset_path"inari1.jpg", class:"w-50" %>
+    <%= image_tag asset_path"inari2.jpg", class:"w-50" %>
+    <%= image_tag asset_path"inari3.jpg", class:"w-50" %>
+    <%= image_tag asset_path"inari4.jpg", class:"w-50" %>
   </div>
 </div>
 
