--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="offset-2 my-5" style="height: 600px;">
+<div class="offset-2 my-5">
   <h3 class="d-inline" style='text-shadow: 1px 2px 3px #808080;'>新規会員登録</h3>
   <h5 class="mx-2 my-4">会員登録がまだの方はこちらから</h5>
   <%= render "users/shared/error_messages", resource: resource %>
