--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,6 +92,13 @@ h2, h3{
     }
 }
 
+main{
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+
 .footer{
+  margin-top: auto;
   background-color: #565656;
 }
