--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@media screen and (max-width:992px) {
+  .mypage-sidebar{
+    display: flex;
+  }
+  .sidebar-content{
+    width: 45%;
+    margin-right: 5%;
+  }
+}
