--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container py-3" style="margin-bottom: 200px;">
+<div class="container py-3">
   <div class="row">
     <% breadcrumb :new_post, @shrine %>
     <div class="col-lg-9 mx-auto">
