--- a/app/views/shrines/index.html.erb
+++ b/app/views/shrines/index.html.erb
@@ -2,7 +2,13 @@
   <div class="row">
     <% breadcrumb :shrines %>
     <div class="col-lg-7">
-      <h2>神社一覧</h2>
+      <div class="d-flex">
+        <h2>神社一覧</h2>
+        <div class="mt-3">
+          <%= link_to "閲覧数順", shrines_path(sort: "views"), class:"mx-2" %>|
+          <%= link_to "ブックマーク数順", shrines_path(sort: "bookmarks") %>
+        </div>
+      </div>
       <% @shrines.each do |shrine| %>
         <div class="card shadow p-0 mb-3">
           <%= link_to shrine_path(shrine), {class:"text-reset"} do %>
