--- a/app/views/homes/manner.html.erb
+++ b/app/views/homes/manner.html.erb
@@ -6,7 +6,7 @@
       <p>参拝の作法については厳密な決まりというものはありませんが、ここでは一般的な作法について説明をします。</p>
       <h3>鳥居をくぐる際には一礼をする</h3>
       <div class="d-flex mb-3">
-        <%= image_tag asset_path("omairi1.jpg"), size:"350x250" %>
+        <%= image_tag asset_path("torii.jpg"), size:"350x250" %>
         <p class="ml-4">
           鳥居は神様の領域を区切る結界としての役割があると言われています。そのため目上の方の家に訪問するような気持ちで丁寧に一礼してから入るようにしましょう。<br />
           参拝を終えた後に帰る際にも振り返り向き直って一礼するようにしましょう。
