--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@ body{
 h2, h3{
   font-family: 'Shippori Mincho B1', serif;
 }
-// エラーメッセージ表示する際の入力フォームの崩れ防止s
+// エラーメッセージ表示する際の入力フォームの崩れ防止
 .field_with_errors {
   display: contents;
 }
