--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -81,7 +81,7 @@
             </div>
             <%= link_to shrine_post_path(post.shrine, post), {class:"text-reset"} do %>
               <div class="col-12 p-0 d-flex flex-wrap">
-                <% post.post_images.each do |post_image| %>
+                <% post.post_images.first(3).each do |post_image| %>
                   <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
                 <% end %>
               </div>
