--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -33,6 +33,6 @@
   </div>
   <div class="d-flex flex-column align-items-center m-auto w-25">
     <h2><span class="underline-dark">見つける</span></h2>
-    <p class="mt-2">地域・祭神・御利益であなたがお参りしたい神社を見つけることができます</p>
+    <p class="mt-2">地域・祭神・御利益であなたがお参りしたい神社を見つけることができます。検索フォームでは複数ワードでの検索ができます。</p>
   </div>
 </div>
