--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -2,7 +2,7 @@
   <% breadcrumb :search %>
   <h2 class="pl-3">検索結果</h2>
   <div class="d-flex flex-wrap justify-content-between">
-    <% @records.each do |shrine| %>
+    <% @shrines.each do |shrine| %>
       <div class="col-lg-6 px-0">
         <div class="card col-lg-11 shadow p-0 mb-3">
           <%= link_to shrine_path(shrine), {class:"text-reset"} do %>
@@ -34,6 +34,6 @@
         </div>
       </div>
     <% end %>
-    <div class="mx-auto mt-3"><%= paginate @records %></div>
   </div>
+  <div class="d-flex justify-content-center mt-3"><%= paginate @shrines %></div>
 </div>
