--- a/app/views/shrines/index.html.erb
+++ b/app/views/shrines/index.html.erb
@@ -5,8 +5,8 @@
       <div class="d-flex">
         <h2>神社一覧</h2>
         <div class="mt-3">
-          <%= link_to "閲覧数順", shrines_path(sort: "views"), class:"mx-2" %>|
-          <%= link_to "ブックマーク数順", shrines_path(sort: "bookmarks"), class:"mr-2" %>|
+          <%= link_to "閲覧数順", shrines_path(sort: "views"), class:"mx-2" %>/
+          <%= link_to "ブックマーク数順", shrines_path(sort: "bookmarks"), class:"mr-2" %>/
           <%= link_to "投稿数順", shrines_path(sort: "posts") %>
         </div>
       </div>
