--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,35 +42,6 @@ h2, h3{
   margin-left: 0;
 }
 
-.navbar-toggler{
-  width: 50px;
-  height: 50px;
-  border-color: #ffffff;
-  background-color: #202326;
-  position: relative;
-}
-
-.navbar-toggler span{
-  position: absolute;
-  left: 5px;
-  width: 80%;
-  height: 3px;
-  background-color: #ffffff;
-  border-radius: 4px;
-}
-
-.navbar-toggler span:nth-child(1){
-  top: 11px;
-}
-
-.navbar-toggler span:nth-child(2){
-  top: 22px;
-}
-
-.navbar-toggler span:nth-child(3){
-  top: 33px;
-}
-
 .tag {
  background:#eee;
  border: none;
@@ -105,4 +76,46 @@ main{
 .footer{
   margin-top: auto;
   background-color: #565656;
+}
+
+@media screen and (max-width:992px) {
+  // ヘッダーのレスポンシブ対応時に見やすいように大きくする
+  header{
+    height: 110px;
+  }
+
+  .navbar img{
+  height: 100px;
+  width: 170px;
+  }
+  // ハンバーガーメニュー
+  .navbar-toggler{
+  width: 90px;
+  height: 90px;
+  border-color: #ffffff;
+  border-width: 2px;
+  background-color: #202326;
+  position: relative;
+    span{
+    position: absolute;
+    left: 9px;
+    width: 80%;
+    height: 6px;
+    background-color: #ffffff;
+    border-radius: 6px;
+    }
+    span:nth-child(1){
+      top: 20px;
+    }
+    span:nth-child(2){
+      top: 42px;
+    }
+    span:nth-child(3){
+      top: 64px;
+    }
+  }
+  .navbar-nav li{
+    height: 60px;
+    font-size: 30px;
+  }
 }
