--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
             <% end %>
           </ul>
         </div>
-        <div class="mb-1">
+        <div class="search_form">
           <%= render "searches/form" %>
         </div>
       </div>
