--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -1,23 +1,31 @@
 <header class="pb-5">
-  <nav class="navbar navbar-expand-md bg-dark fixed-top py-0">
+  <nav class="navbar navbar-expand-lg fixed-top py-0">
     <div class="container">
       <a class="navbar-brand" href="/"><%= image_tag "logo.png", size:"100x50" %></a>
-      <div class="mr-auto">
-        <ul class="navbar-nav">
-          <% if admin_signed_in? %>
-            <li><%= link_to "会員一覧", admin_users_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li><%= link_to "神社一覧", admin_shrines_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li><%= link_to "神社登録", new_admin_shrine_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"nav-link text-white font-weight-bold mr-1" %></li>
-          <% else %>
-            <li><%= link_to "参拝作法", manner_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li><%= link_to "会員としてログイン", new_user_session_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li><%= link_to "ログイン", new_admin_session_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-          <% end %>
-        </ul>
-      </div>
-      <div>
-        <%= render "searches/form" %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#TogglerMenu" aria-controls="TogglerMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="collapse navbar-collapse" id="TogglerMenu">
+        <div class="mr-auto">
+          <ul class="navbar-nav">
+            <% if admin_signed_in? %>
+              <li><%= link_to "会員一覧", admin_users_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li><%= link_to "神社一覧", admin_shrines_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li><%= link_to "神社登録", new_admin_shrine_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li><%= link_to "タグ一覧", admin_tags_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"nav-link text-white font-weight-bold mr-1" %></li>
+            <% else %>
+              <li><%= link_to "参拝作法", manner_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li><%= link_to "会員としてログイン", new_user_session_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li><%= link_to "ログイン", new_admin_session_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+            <% end %>
+          </ul>
+        </div>
+        <div>
+          <%= render "searches/form" %>
+        </div>
       </div>
     </div>
   </nav>
